2007-1-9	fabian

	* save/restore buffer now only save/restore the current screen.
	* removed redundant first_buffer_line from VT100Screen.
	* Added a wrapping flag to indicate hard line break. Selecting&copying now uses this flag.
	* Wrapping now works with resizing.
	
2007-1-6	fabian

	* Improved memory usage for "unlimited" scrollback situation. An upper limit is set to avoid eating up
	  all system memory.

2007-1-3	fabian

	* Added support for xterm's CSI S (SU), CSI T (SD) commands. Nano now works correctly when term type is xterm.
		  
2007-1-2	fabian

	* Fixed initial window size bug (#1623786).
	* Fixed the bottom border, so it no longer overlaps with the resizing triangle.
	* Added support for unlimited scrollback. Set scroll back lines to -1 or any number larger than 1,000,000.
	
2006-12-28	fabian

	* Added an option to enable/disable the border at the bottom of windows.
	
2006-12-21	fabian

	* Moved some scrolling code from VT100Screen to PTYSession to avoid possible crashes.
	* Changed terminal windows to non-deferred to avoid some initializing problem.
	
2006-12-20	fabian

	* Fixed a selection location bug (#1608727).
	* Fixed a scrolling bug (#1619629).
	
2006-12-19	fabian

	* Fixed a bug in VT100Terminal that causes crashes.
	* Fixed a bug that disables dragging of text.
	
2006-12-18	fabian

	* Updated the "term type" list. Removed xterm that doesn't work for many keys.
	* Added a window border when there's no tab bar at the bottom of screen.
	* Fixed a reverse bold color bug.
	
2006-12-15	fabian

	* Fixed the tabbar-disappearing bug (#1613110).
	* Set echok when launching new sessions (#1472673).
	
2006-12-14	fabian

	* Fixed another bold color bug.
	* Changed the default for "use default title with dynamic title" to NO.
	
2006-12-12	fabian

	* Fixed bold color bug.
	* Changed the wording for the "dynamic title" option.
	
2006-12-11	fabian

	* Fixed transparency bug #1609022.
	
2006-12-8	fabian

	* Fixed a wrapping porblem under ANSI terminals.