@@ -7,10 +7,10 @@ www.andymatuschak.org/xml-namespaces/sparkle">
         <description>Most recent changes with links to updates.</description> 
         <language>en</language> 
         <item> 
-            <title>Version 0.9.4.1306</title> 
+            <title>Version 0.9.4.1311</title> 
             <description>http://iterm.sourceforge.net/Changelog.html</description> 
-            <pubDate>Wed, 3 Jan 2007 17:59:11 +0000</pubDate> 
-            <enclosure url="http://iterm.sourceforge.net/iTerm_0.9.4.1306.zip" length="1559232" 
+            <pubDate>Thu,11 Jan 2007 17:59:11 +0000</pubDate> 
+            <enclosure url="http://iterm.sourceforge.net/iTerm_0.9.4.1311.zip" length="1561888" 
 type="application/octet-stream"/> 
         </item> 
     </channel> 
